@@ -182,5 +182,7 @@
 	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
 	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
 	* fs/fs_opendir.c: Correct errors in semaphore usage that can cause deadlock.
+	* lib/lib_getopt.c: Added getopt() support
+	* examples/nsh:  NSH now supports mount, umount, and mkdir.
 	* Started m68322
 
